[package]
name = "fs-tool"
version = "0.1.1"
authors = ["Johnny Debebe <28043284+bjohnnyd@users.noreply.github.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
scraper = "0.11.0"
attohttpc = "0.7.0"
structopt = "0.3.5"
rayon = "1.3.0"
nom = "5.0.1"
directories = "2.0.2"
lazy_static = "1.4.0"
snafu = "0.6.0"
stderrlog="0.4.3"
log = "0.4.8"
