[package]
name = "fs-tool"
version = "0.2.3"
authors = ["Johnny Debebe <28043284+bjohnnyd@users.noreply.github.com>"]
edition = "2018"
publish = false

[workspace]
members = ["./immunoprot", "./netmhcpan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
structopt = "0.3"
rayon = "1.3"
env_logger="0.7.1"
log = "0.4"
directories = "2.0"
thiserror = "1.0.16"
csv="1.1"
chrono = "0.4.11"
serde_with = "1.4"
immunoprot = {path = "immunoprot"}
netmhcpan = {path = "netmhcpan"}

[dependencies.serde]
version = "1.0"
default-features = false
features = ["serde_derive"]

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.4"
