[package]
name = "immunoprot"
version = "0.1.0"
authors = ["Johnny Debebe <28043284+bjohnnyd@users.noreply.github.com>"]
edition = "2018"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
directories = "2.0"
attohttpc = "0.12"
scraper = "0.11"
thiserror = "1.0"
