[package]
name = "immunoprot"
version = "0.1.0"
authors = ["Johnny Debebe <28043284+bjohnnyd@users.noreply.github.com>"]
edition = "2018"
publish = false


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
directories = "2.0"
scraper = "0.11"
thiserror = "1.0"
stderrlog = "0.4"
csv = "1.1"

[dependencies.attohttpc]                                                                                          
version = "0.13.0"                                                                                                
default-features = false                                                                                          
features = ["rustls"]       
